[package]
name = "cargo-boj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
fantoccini = "0.19"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
scraper = "0.15"
directories = "4"
bpaf = { version = "0.7", features = ["batteries"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1"
rpassword = "7"