[package]
name = "cargo-boj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
serde_json = "1"
scraper = "0.15"
directories = "4"
bpaf = { version = "0.7", features = ["batteries"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1"
console = "0.15"
similar = "2"