[package]
name = "cargo-boj"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cargo-BOJ: test and submit solutions to BOJ problems"
homepage = "https://github.com/Bubbler-4/cargo-boj"
repository = "https://github.com/Bubbler-4/cargo-boj"
readme = "README.md"
keywords = ["cli", "web"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
serde_json = "1"
scraper = "0.15"
directories = "4"
bpaf = { version = "0.7", features = ["batteries"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1"
console = "0.15"
similar = "2"
crossterm = "0.26"